finished lifestyle courses section on homepage

--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -3,22 +3,8 @@
 	<div class="flex flex-row items-center">
 		<ul class="p-7 flex items-center mx-auto flex-row mx-48">
 			<li class="mr-6 mt-1">
-				<a href={{ path('app_home') }} data-popover-target="popover-no-arrow1" type="button" class="text-dark font-normal flex hover:text-secondary align-middle">Home
-					<span class="mx-2 my-[9px]">{{ include('./components/svg/dropdown.svg.twig') }}</span>
+				<a href={{ path('app_home') }} data-popover-target="popover-no-arrow1" type="button" class="text-dark font-normal mb-1 mr-6 flex hover:text-secondary align-middle">Home
 				</a>
-				<div data-popover id="popover-no-arrow1" role="tooltip" class="absolute z-10 invisible inline-block text-sm text-gray-500 transition-opacity duration-150 bg-white rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
-					<ul class="py-2 text-sm">
-						<li>
-							<a href="#" class="block text-dark font-normal hover:text-secondary px-4 py-2 hover:bg-gray-100">Home Demo - One</a>
-						</li>
-						<li>
-							<a href="#" class="block text-dark font-normal hover:text-secondary px-4 py-2 hover:bg-gray-100">Home Demo - Two</a>
-						</li>
-						<li>
-							<a href="#" class="block text-dark font-normal hover:text-secondary px-4 py-2 hover:bg-gray-100">Home Demo - Three</a>
-						</li>
-					</ul>
-				</div>
 			</li>
 			<li class="mr-6 mt-1">
 				<button data-popover-target="popover-no-arrow2" type="button" class="text-dark font-normal flex hover:text-secondary align-middle">Pages
