--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -29,3 +29,16 @@ li:hover {
 body {
   background-color: lightgray;
 }
+
+.get-started:hover {
+  .button-block {
+    left: 0px;
+    right: 0px;
+    top: 0px;
+  }
+
+  .pen-icon {
+    transition-duration: 100ms;
+    fill: #16056b;
+  }
+}
