--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -10,7 +10,7 @@
 				<button data-popover-target="popover-no-arrow2" type="button" class="text-dark font-normal flex hover:text-secondary align-middle">Pages
 					<span class="mx-2 my-[9px]">{{ include('./components/svg/dropdown.svg.twig') }}</span>
 				</button>
-				<div data-popover id="popover-no-arrow2" role="tooltip" class="absolute z-10 invisible inline-block text-sm text-gray-500 transition-opacity duration-150 bg-white rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
+				<div data-popover id="popover-no-arrow2" role="tooltip" class="absolute z-10 invisible inline-block text-sm text-gray-500 transition-opacity bg-white rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
 					<ul class="py-2 text-sm">
 						<li>
 							<a href="#" class="block text-dark font-normal hover:text-secondary px-4 py-2 hover:bg-gray-100">About Us</a>
