--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -9,7 +9,7 @@
 					<span class="text-secondary">Health.</span>
 				</h1>
 				<p class="text-dark text-lg mt-3 leading-relaxed">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis placerat arcu nibh sed placerat elementum. Urna eu et purus et mi sit rhoncus. Id nisl quis arcu nulla.</p>
-				<div>
+				<div id="started">
 					<button class="get-started hover:text-nightblue transition duration-300 hover:fill-nightblue flex mt-8 py-3 px-5 text-light bg-tertiary rounded-tl-lg rounded-br-lg relative overflow-hidden z-1">
 						<div class="flex flex-row z-20">
 							Get Started
@@ -23,7 +23,7 @@
 		</div>
 	</section>
 	<section class="mt-[7rem]">
-		<div class="conatiner flex flex-row justify-center">
+		<div class="flex flex-row justify-center">
 			<div class="w-[calc(47%)] text-center">
 				<div class="flex flex-row justify-center items-center mb-4">
 					<img class="mr-2" src={{ asset('/build/flower.png') }}/>
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 		<div class="grid grid-cols-4 px-[18rem] gap-x-9 mt-[5rem]">
-			<div class="relative shadow hover:-translate-y-1 transition duration-500 shadow-lg p-7 rounded-tl-lg rounded br-lg">
+			<div class="relative hover:-translate-y-1 transition duration-500 shadow-lg p-7 rounded-tl-lg rounded br-lg">
 				<div class="z-0">
 					<img class="mb-3" src={{ asset('/build/icon-5.png') }}/>
 					<img class="absolute top-2 right-2" src={{ asset('/build/icon-shape-5.png') }}/>
@@ -48,7 +48,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="relative shadow hover:-translate-y-1 transition duration-500 shadow-lg p-7 rounded-tl-lg rounded br-lg">
+			<div class="relative hover:-translate-y-1 transition duration-500 shadow-lg p-7 rounded-tl-lg rounded br-lg">
 				<img class="mb-3" src={{ asset('/build/icon-6.png') }}/>
 				<img class="absolute top-2 right-2 -z-2" src={{ asset('/build/icon-shape-6.png') }}/>
 				<h3 class="text-2xl my-3 z-10">Workout Routines</h3>
@@ -57,7 +57,7 @@
 					Get started today
 				</a>
 			</div>
-			<div class="relative shadow hover:-translate-y-1 transition duration-500 shadow-lg p-7 rounded-tl-lg rounded br-lg">
+			<div class="relative hover:-translate-y-1 transition duration-500 shadow-lg p-7 rounded-tl-lg rounded br-lg">
 				<img class="mb-3" src={{ asset('/build/icon-7.png') }}/>
 				<img class="absolute top-2 right-2 z-0" src={{ asset('/build/icon-shape-5.png') }}/>
 				<h3 class="text-2xl my-3 z-5">Support
@@ -69,7 +69,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="relative shadow hover:-translate-y-1 transition duration-500 shadow-lg p-7 rounded-tl-lg rounded br-lg">
+			<div class="relative hover:-translate-y-1 transition duration-500 shadow-lg p-7 rounded-tl-lg rounded br-lg">
 				<img class="mb-3" src={{ asset('/build/icon-8.png') }}/>
 				<img class="absolute top-2 right-2 z-0" src={{ asset('/build/icon-shape-6.png') }}/>
 				<h3 class="text-2xl my-3 z-5">Personal Program</h3>
@@ -80,10 +80,9 @@
 			</div>
 		</div>
 	</section>
-	<section>
-
+	<section class="mb-[35rem]">
 		<div class="container relative flex flex-row items-center mt-[6rem] m-auto z-2"></div>
-		<div class="absolute bg-primary w-full h-[80%] z-0  inset-x-0 top-50">
+		<div class="absolute bg-primary w-full h-[80%] z-0 inset-x-0 top-50">
 			<div class="grid grid-cols-2 items-center gap-x-12 px-[12rem] py-[5rem]">
 				<div class="grid justify-items-center">
 					<div class="place-self-end mb-9 relative">
@@ -94,7 +93,7 @@
 						<img src={{ asset('build/about-img-3.jpg') }}/>
 					</div>
 					<div class="place-self-start relative">
-						<a href="https://www.youtube.com/watch?v=zv5bpfxJ2xE" target="_blank" rel="noreferrer" class="video-div shadow-lg flex flex-row justify-center absolute flex flex-row m-auto inset-y-5 -right-44 p-8 h-[30%] rounded-br-lg rounded-tl-lg bg-light">
+						<a href="https://www.youtube.com/watch?v=zv5bpfxJ2xE" target="_blank" rel="noreferrer" class="video-div shadow-lg justify-center absolute flex flex-row m-auto inset-y-5 -right-44 p-8 h-[30%] rounded-br-lg rounded-tl-lg bg-light">
 							<span class="flex self-center">{{ include('./components/svg/play-button.svg.twig') }}</span>
 							<p class="font-bold m-auto text-secondary align-middle">Watch Video</p>
 						</a>
@@ -108,16 +107,61 @@
 					<h1 class="text-5xl font-title-medium">Smart Tutoring Program for Success People</h1>
 					<p class="text-dark my-7">Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas ut labore et dolore magna aliqua.</p>
 					<p class="text-dark">Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas.</p>
-					<div>
+					<div id="feature">
 						<button class="get-started hover:text-nightblue transition duration-300 hover:fill-nightblue flex mt-8 py-3 px-5 text-light bg-tertiary rounded-tl-lg rounded-br-lg relative overflow-hidden z-1">
 							<div class="flex flex-row z-20">
-								Join For Feature
-								<div class="ml-2 pt-[3px] z-20 transition">{{ include('./components/svg/arrow-right.svg.twig') }}</div>
+								Join for Feature
+								<span class="ml-2 pt-[3px] z-20 transition">{{ include('./components/svg/pen.svg.twig') }}</span>
 							</div>
-							<div class="button-block absolute transition-all px-[5.7rem] py-[1.5rem] inset-x-0 -top-16 hover:inset-x-0 hover:top-0 z-10 bg-secondary w-fit hover:-transform-y-5"></div>
+							<div class="button-block absolute transition-all px-[5.80rem] py-[1.5rem] inset-x-0 -top-16 z-10 bg-secondary w-fit"></div>
 						</button>
 					</div>
 				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="flex flex-row justify-center">
+			<div class="w-[calc(47%)] text-center mt-[20rem]">
+				<div class="flex flex-row justify-center items-center mb-4">
+					<img class="mr-2" src={{ asset('/build/flower.png') }}/>
+					<p class="text-nightblue font-bold">Our offers</p>
+				</div>
+				<h1 class="text-5xl font-title">How do we
+					<span class="text-secondary">work ?</span>
+				</h1>
+			</div>
+		</div>
+		<div class="grid grid-cols-3 gap-x-16 px-[17rem] py-[4rem]">
+			<div class="work-caption relative pt-[10rem] transition duration-[350ms] hover:-translate-y-2">
+				<div class="absolute -left-10 top-0 p-8 w-[25rem] bg-light shadow-lg rounded-br-lg rounded-tl-lg">
+					<h1 class="text-dark text-2xl transition duration[350ms]">Balance Body Mind</h1>
+					<p class="text-dark text-sm my-5">Lorem ipsum dolor sit amet cnsetur adipiscing elit sed do eiusmod tempor incididunt ut labore</p>
+					<a href="#" class="text-nightblue transition-all duration-500 hover:text-secondary hover:tracking-widest">
+						Read more
+					</a>
+				</div>
+				<img class="rounded-br-lg rounded-tl-lg" src={{ asset('/build/work-1.jpg') }}/>
+			</div>
+			<div class="work-caption relative transition duration-[350ms] hover:-translate-y-2">
+				<div class="absolute -left-10 bottom-0 p-8 w-[25rem] bg-light shadow-lg rounded-br-lg rounded-tl-lg">
+					<h1 class="text-dark text-2xl transition duration[350ms]">Women’s Coaching</h1>
+					<p class="text-dark text-sm my-5">Lorem ipsum dolor sit amet cnsetur adipiscing elit sed do eiusmod tempor incididunt ut labore</p>
+					<a href="#" class="text-nightblue transition-all duration-500 hover:text-secondary hover:tracking-widest">
+						Read more
+					</a>
+				</div>
+				<img class="rounded-br-lg rounded-tl-lg" src={{ asset('/build/work-2.jpg') }}/>
+			</div>
+			<div class="work-caption relative pt-[10rem] transition duration-[350ms] hover:-translate-y-2">
+				<div class="absolute -left-10 top-0 p-8 w-[25rem] bg-light shadow-lg rounded-br-lg rounded-tl-lg">
+					<h1 class="text-dark text-2xl transition duration[350ms]">Men's Coaching</h1>
+					<p class="text-dark text-sm my-5">Lorem ipsum dolor sit amet cnsetur adipiscing elit sed do eiusmod tempor incididunt ut labore</p>
+					<a href="#" class="text-nightblue transition-all duration-500 hover:text-secondary hover:tracking-widest">
+						Read more
+					</a>
+				</div>
+				<img class="rounded-br-lg rounded-tl-lg" src={{ asset('/build/work-3.jpg') }}/>
 			</div>
 		</div>
 	</section>
